# MnfParser

./: .gitignore  CMakeLists.txt  README.md  install_vcpkg.bat
MnfParser/: CMakeLists.txt
MnfParser/include/MnfParser/: MnfBinParser.h
MnfParser/src/: MnfBinParser.cpp  main.cpp
notebook/: 1struct_first.md  2opt_second.md  模态中性文件（mnf）数据组织结构.md
tests/: CMakeLists.txt  main.cpp  test_MnfParserLib.cpp  test_siso_beam.h  test_siso_block.h  test_two_input_single_output_block_beam.h
tests/data/: siso_beam.mnf  siso_beam.mtx  siso_block.mnf  siso_block.mtx  two_input_single_output_block_beam.mnf  two_input_single_output_block_beam.mtx
